# studi_fastapi

./: README.md  api.py  main.py  models.py  project1.py  pyproject.toml  test.py
