package-mode = false
[project]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = [
    {name = "petrtimalev",email = "petr.timalev@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
